2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring.NodeBuilders/AddinReferenceNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ExtensionsNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ProjectFolderNodeBuilderExtension.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ExtensionPointsNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/AddinFolderNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ReferencesFolderNodeBuilder.cs:
	  Moved the extensible tree view to its own directory.

2008-08-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/NodeSetEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/TypeSelector.cs,
	  MonoDevelop.AddinAuthoring/ExtensionPointsEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/ExtensionEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinDescriptionWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinOptionPanelWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinFeatureWidget.cs,
	  MonoDevelop.AddinAuthoring/CellRendererExtension.cs,
	  MonoDevelop.AddinAuthoring/RegistrySelector.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/AddinFolderNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.mdp, gtk-gui/objects.xml: Use new model
	  for exporting stetic widgets.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs,
	  MonoDevelop.AddinAuthoring/AddinData.cs,
	  MonoDevelop.AddinAuthoring/RegistryExtensionNode.cs: Moved
	  serialization engine to MonoDevelop.Core. Use new syntax for
	  specifying attribute scope.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* configure, MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.

2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs: Track api
	  changes.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring.addin.xml: Merged the extension points for