@@ -1,3 +1,8 @@
+2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs,
+	  MonoDevelop.AddinAuthoring/TypeSelector.cs: Track api changes.
+
 2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.AddinAuthoring.NodeBuilders/AddinReferenceNodeBuilder.cs,
